task: added bulk ingestion for transactions
